[package]
name = "sysconf"
version = "0.1.2"
authors = ["Gary M. Josack <gary@byoteki.com>"]
repository = "https://github.com/zerocostgoods/sysconf.rs"
documentation = "https://docs.rs/sysconf"
license = "MIT OR Apache-2.0"
description = "Small safe wrapper around sysconf"

[dependencies]
libc = "0.2.4"

